--- a/src/app.css
+++ b/src/app.css
@@ -3,7 +3,7 @@
 @import '@fontsource/inter/800.css';
 
 :root {
-	--font-family: "Inter", Arial, 'Helvetica Neue', sans-serif;
+    --font-family: "Inter", Arial, 'Helvetica Neue', sans-serif;
     --color-text: #d4d4d8;
     --color-primary: #e879f9;
     --color-secondary: #86198f;
@@ -13,6 +13,12 @@
     --font-weight-black: 800;
 
     --animation-duration: 0.2s;
+
+    --space-xxs: .5rem;
+    --space-xs: 1rem;
+    --space-sm: 1.5rem;
+    --space-md: 3rem;
+    --space-lg: 6rem;
 }
 
 * {
@@ -22,12 +28,8 @@
 }
 
 body {
-    display: flex;
-    flex-direction: column;
     min-height: 100dvh;
     font-family: var(--font-family), sans-serif;
-    color: var(--color-text);
-	background: linear-gradient(45deg, #1d011f 0%, #120113 25%, #120113 75%, #1d011f 100%);
     line-height: 1.15;
 }
 
@@ -35,11 +37,9 @@ main {
     flex: 1;
     display: flex;
     flex-direction: column;
-    padding: 1rem;
-    width: 100%;
-    max-width: 64rem;
-    margin: 0 auto;
-    box-sizing: border-box;
+    min-height: 100dvh;
+    color: var(--color-text);
+    background: linear-gradient(45deg, #1d011f 0%, #120113 25%, #120113 75%, #1d011f 100%);
 }
 
 h1, h2, h3,
@@ -48,37 +48,38 @@ h4, h5, h6 {
 }
 
 a {
-	color: var(--color-text);
-	text-decoration: none;
+    font-weight: var(--font-weight-bold);
+    color: var(--color-text);
+    text-decoration: none;
     transition: color var(--animation-duration) ease-in-out;
 }
 
 a:hover {
     color: var(--color-primary);
-	text-decoration: underline;
+    text-decoration: underline;
 }
 
 h1 {
-	font-size: 2rem;
-	text-align: center;
+    font-size: 2rem;
+    text-align: center;
 }
 
 @media screen and (min-width: 768px) {
-	h1 {
-		font-size: 2.4rem;
-	}
+    h1 {
+        font-size: 2.4rem;
+    }
 }
 
 .visually-hidden {
-	border: 0;
-	clip: rect(0 0 0 0);
-	height: auto;
-	margin: 0;
-	overflow: hidden;
-	padding: 0;
-	position: absolute;
-	width: 1px;
-	white-space: nowrap;
+    border: 0;
+    clip: rect(0 0 0 0);
+    height: auto;
+    margin: 0;
+    overflow: hidden;
+    padding: 0;
+    position: absolute;
+    width: 1px;
+    white-space: nowrap;
 }
 
 .text-gradient {
